Working commit with 100 ms fade in

--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
 <body>
 
 
-<form>
-<input type="text" id="search">
-</form>
 
-<div id="results"></div>
+        <form>
+            <input type="text" id="search" placeholder="type to search...">
+            <span id="mag"></span>
+        </form>
 
+    <div id="page-container">
+
+        <div id="results"></div>
+
+
+    </div>
 
 <script src="app.js"></script>
 
