removed mag glass

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <form>
             <input type="text" id="search" placeholder="type to search...">
-            <span id="mag"></span>
+<!--            <span id="mag"></span>-->
         </form>
 
     <div id="page-container">
