Corrected border glitch

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
         <form>
-            <input type="text" id="search" placeholder="type to search...">
+            <input type="text" id="search" placeholder="type to search Wikipedia...">
 <!--            <span id="mag"></span>-->
         </form>
 
