Add CSS - on page load, search is centered. After search, search bar is at top of window

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
 
 
-
+    <div id="searchbox" class="vertical-center">
         <form>
             <input type="text" id="search" placeholder="type to search Wikipedia...">
-<!--            <span id="mag"></span>-->
         </form>
+     </div>
 
     <div id="page-container">
 
