Added dice and logo

--- a/index.html
+++ b/index.html
@@ -14,15 +14,31 @@
 
 
     <div id="searchbox" class="vertical-center">
+
+        <!-- logo -->
+        <a href="https://en.wikipedia.org/">
+            <img id="wiki-logo" src="wiki-logo.svg">
+        </a>
+
+
+        <!-- search box -->
         <form>
             <input type="text" id="search" placeholder="type to search Wikipedia...">
         </form>
-     </div>
+
+        <!-- dice -->
+        <a href="https://en.wikipedia.org/wiki/Special:Random">
+            <img id="dice" src="dice.svg">
+        </a>
+
+
+    </div>
+
 
     <div id="page-container">
 
+        <!--output-->
         <div id="results"></div>
-
 
     </div>
 
